<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserProfile"
    android:background="@color/background">


    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="15dp"
        android:orientation="vertical">

        <com.makeramen.roundedimageview.RoundedImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/ic_account"
            app:riv_oval="true"
            />

        <TextView
            android:id="@+id/UserProfTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/james_thomas"
            android:textColor="@color/text_or_icon"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#7E7676"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical">


        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_baseline_person_24"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FName"
            android:textColor="@color/text_or_icon"
            android:textSize="20dp"
            android:layout_marginLeft="5dp"/>

        <TextView
            android:id="@+id/UserFnameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="James"
            android:layout_marginLeft="25dp"
            android:textSize="18dp"
            android:textColor="#BDB0B0"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white1"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical">


        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_phone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Phone"
            android:textColor="@color/text_or_icon"
            android:textSize="20dp"
            android:layout_marginLeft="5dp"/>

        <TextView
            android:id="@+id/UserPhoneTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Thomas"
            android:layout_marginLeft="55dp"
            android:textSize="18dp"
            android:textColor="#BDB0B0"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white1"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical">


        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_email"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Email"
            android:textColor="@color/text_or_icon"
            android:textSize="20dp"
            android:layout_marginLeft="5dp"/>

        <TextView
            android:id="@+id/UserEmailTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="JThomas@gmail.com"
            android:layout_marginLeft="60dp"
            android:textSize="18dp"
            android:textColor="#BDB0B0"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white1"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/editProfBtn"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:background="@drawable/bg_btn"
            android:text="@string/edit_profile"
            android:gravity="center"
            android:textColor="@color/text_or_icon"
            android:textSize="18dp"
            android:drawableLeft="@drawable/ic_edit"
            android:paddingLeft="20dp"
            android:clickable="true"
            android:onClick="editprofile"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:layout_width="240dp"
            android:layout_height="50dp"
            android:background="@drawable/bg_btn"
            android:text="@string/change_pw"
            android:gravity="center"
            android:textColor="@color/text_or_icon"
            android:textSize="18dp"
            android:drawableLeft="@drawable/ic_lock"
            android:paddingLeft="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"/>

    </LinearLayout>


</LinearLayout>