<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="12dp"
    android:orientation="vertical"
    tools:context=".CustomerDashboard">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="274dp"
        android:layout_height="45dp"
        android:text="Customer Dashboard"
        android:textAlignment="center"
        android:textColor="@color/text_or_icon"
        android:textSize="23sp"
        app:layout_constraintBottom_toTopOf="@+id/imageProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/imageProfile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="84dp"
        android:src="@drawable/ic_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_oval="true"
        tools:ignore="MissingConstraints" />
    
    <TextView
        android:id="@+id/textUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/james_thomas"
        android:textColor="@color/text_or_icon"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageProfile"
        />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAad"
        android:layout_width="105dp"
        android:layout_height="143dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="44dp"
        android:contentDescription="@string/app_name"
        android:onClick="SignOut"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/background"
        tools:ignore="UsingOnClickInXml"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="16dp"
        android:text="Logout"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/fabAad"
        app:layout_constraintEnd_toEndOf="@+id/fabAad"
        app:layout_constraintStart_toStartOf="@+id/fabAad"
        app:layout_constraintTop_toTopOf="@+id/fabAad" />

    <androidx.constraintlayout.helper.widget.Flow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="dashB1,dashB4"
        app:flow_horizontalGap="8dp"
        app:flow_maxElementsWrap="2"
        app:flow_verticalGap="8dp"
        app:flow_wrapMode="aligned"
        app:layout_constraintBottom_toTopOf="@id/fabAad"
        app:layout_constraintTop_toBottomOf="@id/imageProfile"
        tools:layout_editor_absoluteX="16dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/dashB1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/dashboard_item_1"
        app:cardCornerRadius="16dp"
        app:cardUseCompatPadding="true"
        android:onClick="AccSetting"
        android:clickable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/option1"
                android:textColor="@color/text_or_icon"
                android:textSize="15sp"
                android:textStyle="bold"
                />
        </LinearLayout>


    </androidx.cardview.widget.CardView>
    >
    <androidx.cardview.widget.CardView
        android:id="@+id/dashB4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        app:cardBackgroundColor="@color/dashboard_item_4"
        android:onClick="BrowseCategory"
        app:cardCornerRadius="16dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/option_4"
                android:textColor="@color/text_or_icon"
                android:textSize="15sp"
                android:textStyle="bold"
                />
        </LinearLayout>


    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>